adjust light mode contrast + fix accessibility slider icon showing up

--- a/config/theme/auto/enable.css
+++ b/config/theme/auto/enable.css
@@ -62,7 +62,7 @@
 
   @media (prefers-contrast: more) {
     :root {
-      --option-color-background-secondary: 215, 215, 215;
+      --option-color-background-secondary: 255, 255, 255;
     }
   }
 }
