--- a/config/theme/mode/light/colors.css
+++ b/config/theme/mode/light/colors.css
@@ -317,6 +317,6 @@
 
 @media (prefers-contrast: more) {
   :root {
-    --option-color-background-secondary: 215, 215, 215;
+    --option-color-background-secondary: 255, 255, 255;
   }
 }
