--- a/css/settings/settings.css
+++ b/css/settings/settings.css
@@ -1529,7 +1529,7 @@ div:not(:first-child) > .DialogSubHeader {
 }
 
 /* ACCESSIBILITY */
-.DialogContent[aria-labelledby=":r3uk:/settings/accessibility"] .aFxOaYcllWYkCfVYQJFs0 > .eKmEXJCm_lgme24Fp_HWt ._198v6zB5mZ5FWG0wpQU_3m::before {
+.DialogContent:has(.dbACWBb8zr4cf4u05jQ4x) .aFxOaYcllWYkCfVYQJFs0 > .eKmEXJCm_lgme24Fp_HWt ._198v6zB5mZ5FWG0wpQU_3m::before {
   display: none !important;
 }
 
